# rust_art_experiments

./: .gitignore  LICENSE  _config.yml  index.md
.github/workflows/: deploy-website.yml
art-template/: .gitignore  Cargo.toml  package.json
art-template/src/: main.rs  model.rs  sketch.rs
art-template/static/: index.html
art1/: Cargo.toml
art1/src/: main.rs
art2/: Cargo.toml
art2/src/: main.rs
art3-tree/: Cargo.toml
art3-tree/src/: main.rs
art4-trees/: Cargo.toml
art4-trees/src/: main.rs  model.rs
art5-flow-fields/: 235.js  3abeda0fdd286694.module.wasm  Cargo.toml  package-lock.json  package.json
art5-flow-fields/src/: sketch.rs
art6-bezier-curves/: 235.js  251de61a076ee0d9.module.wasm  Cargo.toml  README.md  index.html  index.js  package-lock.json  package.json
art6-flowers/: 235.js  Cargo.toml  a3db0292bbc1a974.module.wasm  index.html  index.js  package.json
art6-flowers/js/: index.js
art6-flowers/src/: lib.rs  sketch.rs
shape_builder/: Cargo.toml
shape_builder/src/: lib.rs
website/art5-flow-fields/: 235.js  44b7c5d1fbd0b838.module.wasm  index.html  index.js
